--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         iframe {
             margin-top: 20px;
             border: none;
-            width: 80%;
-            height: 500px;
-            max-width: 800px;
+        }
+
+        p {
+            margin-top: 20px;
         }
 
         a {
@@ -37,12 +38,21 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Discord Server</h1>
-    <p>Join us and be part of the community!</p>
+    <h1>Welcome to Our Discord Community!</h1>
+    <p>Stay connected and join the conversation.</p>
 
-    <!-- Embedded Discord server -->
-    <iframe src="https://discord.com/widget?id=1104376749537228811&theme=dark" allowtransparency="true"></iframe>
+    <!-- Embedded Discord server widget -->
+    <iframe 
+        src="https://discord.com/widget?id=1325533924134228018&theme=dark" 
+        width="350" 
+        height="500" 
+        allowtransparency="true" 
+        frameborder="0" 
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+    </iframe>
     
-    <p>Click <a href="https://discord.gg/s4FGSvU8yU" target="_blank">here</a> to join the server directly.</p>
+    <p>
+        Need help joining? Click <a href="https://discord.gg/s4FGSvU8yU" target="_blank">here</a> to join the server directly!
+    </p>
 </body>
 </html>
