--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Server</title>
+    <title>Greetings,traveller</title>
     <style>
         body {
             margin: 0;
@@ -38,8 +38,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Our Discord Community!</h1>
-    <p>Stay connected and join the conversation.</p>
+    <h1>Best accounts and prices</h1>
+    <p>Join us now</p>
 
     <!-- Embedded Discord server widget -->
     <iframe 
