--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greetings,traveller</title>
+    <title>Discord Server</title>
     <style>
         body {
             margin: 0;
@@ -23,10 +23,6 @@
             border: none;
         }
 
-        p {
-            margin-top: 20px;
-        }
-
         a {
             color: #7289da;
             text-decoration: none;
@@ -38,10 +34,10 @@
     </style>
 </head>
 <body>
-    <h1>Best accounts and prices</h1>
-    <p>Join us now</p>
+    <h1>Welcome to Our Discord Community!</h1>
+    <p>Stay connected and join the conversation.</p>
 
-    <!-- Embedded Discord server widget -->
+    <!-- Embedded Discord Widget -->
     <iframe 
         src="https://discord.com/widget?id=1325533924134228018&theme=dark" 
         width="350" 
@@ -50,9 +46,10 @@
         frameborder="0" 
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
     </iframe>
-    
+
+    <!-- Fallback Invite Link -->
     <p>
-        Need help joining? Click <a href="https://discord.gg/s4FGSvU8yU" target="_blank">here</a> to join the server directly!
+        If the widget isn't loading, <a href="https://discord.gg/s4FGSvU8yU" target="_blank">click here</a> to join directly!
     </p>
 </body>
 </html>
