--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             height: 100%;
             background-color: #111;
             box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-            padding-top: 20px;
+            padding-top: 60px; /* Moves buttons lower */
             z-index: 1000;
             transition: left 0.3s ease; /* Smooth slide-in */
         }
@@ -93,10 +93,9 @@
 
         /* Store Page Styling */
         .store-items {
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
-            justify-content: center;
             margin-top: 20px;
         }
 
@@ -106,13 +105,21 @@
             border-radius: 10px;
             padding: 15px;
             text-align: center;
-            width: 200px;
             color: #fff;
         }
 
         .store-item img {
             max-width: 100%;
             border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        .store-item h3 {
+            margin: 10px 0;
+        }
+
+        .store-item p {
+            margin: 5px 0;
         }
 
         .store-item button {
@@ -172,26 +179,32 @@
         <h1>Store</h1>
         <p>Check out our items below:</p>
         <div class="store-items">
-            <!-- Example Store Item -->
+            <!-- Example Store Items -->
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 1">
+                <img src="https://via.placeholder.com/250" alt="Item 1">
                 <h3>Item 1</h3>
-                <p>$10.00</p>
-                <button>Buy Now</button>
+                <p>Price: $10.00</p>
+                <a href="https://example.com/item1" target="_blank">
+                    <button>Buy Now</button>
+                </a>
             </div>
 
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 2">
+                <img src="https://via.placeholder.com/250" alt="Item 2">
                 <h3>Item 2</h3>
-                <p>$15.00</p>
-                <button>Buy Now</button>
+                <p>Price: $15.00</p>
+                <a href="https://example.com/item2" target="_blank">
+                    <button>Buy Now</button>
+                </a>
             </div>
 
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 3">
+                <img src="https://via.placeholder.com/250" alt="Item 3">
                 <h3>Item 3</h3>
-                <p>$20.00</p>
-                <button>Buy Now</button>
+                <p>Price: $20.00</p>
+                <a href="https://example.com/item3" target="_blank">
+                    <button>Buy Now</button>
+                </a>
             </div>
         </div>
     </div>
