--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         /* Discord Embed Styling */
         iframe {
-            width: 100%; /* Full width for mobile */
+            width: 80%; /* Full width for mobile */
             max-width: 400px; /* Limit size for larger screens */
             height: 500px;
             border: none;
@@ -174,8 +174,8 @@
 
     <!-- Main Content -->
     <div id="home" class="main-content fade-in">
-        <h1>Welcome to Our Discord Community!</h1>
-        <p>Stay connected and join the conversation.</p>
+        <h1>Welcome</h1>
+        <p>Quality accounts for cheap.</p>
 
         <!-- Embedded Discord Widget -->
         <iframe 
