--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- Main Content -->
     <div id="home" class="main-content fade-in">
         <h1>Welcome</h1>
-        <p>Quality accounts for cheap.</p>
+        <p>Accounts for cheap.</p>
 
         <!-- Embedded Discord Widget -->
         <iframe 
@@ -192,7 +192,7 @@
         <div class="store-items">
             <!-- Example Store Items -->
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 1">
+                <img src="https://files.catbox.moe/lm9onl.png" alt="Item 1">
                 <h3>Minecraft SFA</h3>
                 <p>Price: $0.10/account</p>
                 <a href="https://example.com/item1" target="_blank">
