--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
 
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 2">
+                <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
                 <h3>Optifine Account</h3>
                 <p>Price: $0.05/account</p>
                 <a href="https://example.com/item2" target="_blank">
