--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="store-items">
             <!-- Example Store Items -->
             <div class="store-item">
-                <img src="https://files.catbox.moe/lm9onl.png" alt="Item 1">
+                <img src="https://files.catbox.moe/s7iw8m.jpeg" alt="Item 1">
                 <h3>Minecraft SFA</h3>
                 <p>Price: $0.10/account</p>
                 <a href="https://example.com/item1" target="_blank">
@@ -210,7 +210,7 @@
             </div>
 
             <div class="store-item">
-                <img src="https://via.placeholder.com/150" alt="Item 3">
+                <img src="https://files.catbox.moe/6qsb24.jpeg" alt="Item 3">
                 <h3>Valorant Account</h3>
                 <p>Price: $0.30/account</p>
                 <a href="https://example.com/item3" target="_blank">
