--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/s7iw8m.jpeg" alt="Item 1">
                 <h3>Minecraft SFA</h3>
-                <p>Price: $0.10/account</p>
-                <a href="https://example.com/item1" target="_blank">
+                <p>Price: $0.50/5 accounts</p>
+                <a href="https://ziehung.mysellix.io/product/minecraft-sfa-account-677b1aa56cf7e" target="_blank">
                     <button>Buy Now</button>
                 </a>
             </div>
@@ -203,7 +203,7 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
                 <h3>Optifine Account</h3>
-                <p>Price: $0.05/account</p>
+                <p>Price: $0.50/20 accounts</p>
                 <a href="https://example.com/item2" target="_blank">
                     <button>Buy Now</button>
                 </a>
@@ -212,7 +212,7 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/6qsb24.jpeg" alt="Item 3">
                 <h3>Valorant Account</h3>
-                <p>Price: $0.30/account</p>
+                <p>Price: $0.50/3 accounts</p>
                 <a href="https://example.com/item3" target="_blank">
                     <button>Buy Now</button>
                 </a>
