--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Server</title>
+    <title>Welcome!</title>
     <style>
         /* General Styling */
         body {
@@ -194,7 +194,6 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/s7iw8m.jpeg" alt="Item 1">
                 <h3>Minecraft SFA</h3>
-                <p>Price: $0.50/5 accounts</p>
                 <a href="https://ziehung.mysellix.io/product/minecraft-sfa-account-677b1aa56cf7e" target="_blank">
                     <button>Buy Now</button>
                 </a>
@@ -203,16 +202,13 @@
             <div class="store-item">
                 <img src="https://files.catbox.moe/pqjd5n.jpeg" alt="Item 2">
                 <h3>Optifine Account</h3>
-                <p>Price: $0.50/20 accounts</p>
                 <a href="https://example.com/item2" target="_blank">
                     <button>Buy Now</button>
                 </a>
             </div>
-
             <div class="store-item">
                 <img src="https://files.catbox.moe/6qsb24.jpeg" alt="Item 3">
                 <h3>Valorant Account</h3>
-                <p>Price: $0.50/3 accounts</p>
                 <a href="https://example.com/item3" target="_blank">
                     <button>Buy Now</button>
                 </a>
