--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
     </style>
 </head>
 <body>
+    <!-- Autoplay Background Music -->
+    <audio autoplay loop>
+        <source src="https://files.catbox.moe/ozp5g8.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <!-- Sidebar Toggle Button -->
     <button class="sidebar-toggle" onclick="toggleSidebar()">☰ Menu</button>
 
